Fixed text-align of footer

--- a/layout/footer.scss
+++ b/layout/footer.scss
@@ -80,6 +80,10 @@ footer {
       }
     }
     button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 1.2rem;
       border: none;
       height: 100%;
       width: 14%;
@@ -224,8 +228,6 @@ footer {
       text-align: start;
       gap: 0.2rem;
       li {
-        display: flex;
-        flex-direction: column;
         i {
           text-align: center;
         }
@@ -236,6 +238,8 @@ footer {
     text-align: center;
     ul {
       li {
+        display: flex;
+        flex-direction: column;
         font-size: 1.1rem;
         text-align: center;
       }
